# bitparse

./: README.md  pyproject.toml
src/bitparse/: __init__.py  bit_model.py  bitview.py  fields.py
tests/: test_bitmodel.py  test_bitview.py
