[project]
name = "bitparse"
version = "0.0.1"
description = "Bit manipulation utilities."
authors = [
    {name = "Karl Krauth", email = "karl.krauth@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitarray>=3.7.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.2",
    "ty>=0.0.1a24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
